# gem-1

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
inference_scripts/: inference.py  metrics.py
src/gem/: __init__.py  __main__.py  model.py
tests/: test_model.py
text_to_rna/: __init__.py  constants.py  data.py  gene_id_order.json  gene_order.json  gene_order.py  metrics.py  perturbation_dose_znorm_factors.json  perturbation_time_znorm_factors.json  scalers.py  vocab.py
text_to_rna/counts/: bulk_age.parquet  bulk_age_years.parquet  bulk_cell_line_name.parquet  bulk_cell_line_ontology_id.parquet  bulk_cell_type_name.parquet  bulk_cell_type_ontology_id.parquet  bulk_developmental_stage.parquet  bulk_disease_name.parquet  bulk_disease_ontology_id.parquet  bulk_ethnicity.parquet  bulk_genotype.parquet  bulk_library_layout.parquet  bulk_library_selection.parquet  bulk_perturbation_dose.parquet  bulk_perturbation_name.parquet  bulk_perturbation_ontology_id.parquet  bulk_perturbation_time.parquet  bulk_perturbation_type.parquet  bulk_platform.parquet  bulk_race.parquet  bulk_sample_type.parquet  bulk_sex.parquet  bulk_study.parquet  bulk_tissue_name.parquet  bulk_tissue_ontology_id.parquet  czi_age.parquet  czi_age_years.parquet  czi_cell_type_name.parquet  czi_cell_type_ontology_id.parquet  czi_disease_name.parquet  czi_disease_ontology_id.parquet  czi_ethnicity.parquet  czi_platform.parquet  czi_race.parquet  czi_sample_type.parquet  czi_sex.parquet  czi_study.parquet  czi_subject_identifier.parquet  czi_tissue_name.parquet  (+77 more)
(+6 files in other folders)
