[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "text-to-rna"
version = "0.1.0"
description = "Utilities and pretrained models for text-conditioned gene expression generation."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Preprint 2025 Contributors" }]
dependencies = [
    "cloudpathlib==0.18.1",
    "cytoolz==0.12.3",
    "lightning==2.4.0",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "pandas==2.1.4",
    "pyarrow==15.0.2",
    "torch==2.8.0",
    "torchvision>=0.18.0",
    "torchmetrics==1.3.2",
    "transformers==4.53.0",
    "wandb==0.16.4",
    "zuko==1.3.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["text_to_rna*"]
